# coding_challenges

./: ..gitignore.un~  .requirements.txt.un~  Interview_tips_google.ipynb  LICENSE  README.md  Untitled.ipynb  Untitled2.ipynb  pyproject.toml  sorting.ipynb
_python reference/: _playground.ipynb  bitwise.ipynb  conventions.ipynb  data structures operations.ipynb  heap_implementation.ipynb  lambda.ipynb  playground.ipynb  strings.ipynb
_python_reference/: classes.ipynb  data structures operations.ipynb  lambda.ipynb  recursion.ipynb
_temp/: Untitled.ipynb
arrays_strings/: 278. First Bad Version (easy).ipynb  28. Implement strStr().ipynb  374. Guess Number Higher or Lower (easy).ipynb  498. Diagonal Traverse(medium).ipynb  53. Maximum Subarray (Easy).ipynb  55. Jump Game.ipynb  904. Fruits into basket.ipynb
bit manipulation/: 67. Add Binary (easy).ipynb
dynamic programming/: 121. Best Time to Buy and Sell Stock (easy).ipynb  152. Maximum Product Subarray (medium).ipynb  322. Coin Change (medium).ipynb  5. Longest Palindromic Substring (medium).ipynb  509. Fibonacci Number (easy).ipynb  53. Maximum Subarray (easy).ipynb  Dynamic Programming - freeCodeCamp.org.ipynb  _others.ipynb
implement data structures/: Bit.ipynb  Disjoint Set.ipynb  Heap.ipynb  Linked list (non-circular).ipynb  Queue.ipynb  Stack.ipynb  Untitled.ipynb  graphs.ipynb
linked lists/: 138. Copy List with Random Pointer (medium).ipynb  19. Remove Nth Node From End of List (medium).ipynb  2. Add Two Numbers (medium).ipynb  21. Merge Two Sorted Lists (easy).ipynb
oo design/: Game Of Life.ipynb  (+2 more)
(+53 files in other folders)
